<resources>
    <string name="app_name">Tada Assignment</string>

    <!-- Global -->
    <string name="retry">Retry</string>

    <!-- Splash -->
    <string name="dev_name">Fauzi M D</string>

    <!-- Home -->
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>

    <!-- Auth -->
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="don_t_have_account">Don’t have account ?</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="i_agree_with_terms_and_condition">I Agree with Terms and Condition</string>

</resources>