<?xml version="1.0" encoding="utf-8"?>
<dev.illwiz.tada.data.utils.CustomFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentInsetStartWithNavigation="0dp"
                app:navigationIcon="@drawable/abc_ic_ab_back_material"
                app:navigationIconTint="@color/white"
                app:title="@string/app_name"
                app:titleTextColor="@color/white" />
        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="36dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/register"
                    android:textAlignment="gravity"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="26sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/usernameTil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="46dp"
                    android:hint="@string/username">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/usernameForm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLength="56"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordTil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordForm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLength="56"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/termsCheckBoxWrapper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/termsCheckBox"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:background="?android:attr/listChoiceIndicatorMultiple"
                        android:backgroundTint="@color/checkbox_button_tint"
                        android:button="@null" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/i_agree_with_terms_and_condition"
                        android:textAlignment="gravity"
                        android:textColor="@color/black"
                        android:textSize="13sp" />

                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/registerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="16dp"
                    android:paddingHorizontal="50dp"
                    android:paddingVertical="10dp"
                    android:text="@string/register"
                    android:textSize="13sp" />
            </LinearLayout>
        </FrameLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</dev.illwiz.tada.data.utils.CustomFrameLayout>