<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentInsetStartWithNavigation="0dp"
                app:navigationIcon="@drawable/abc_ic_ab_back_material"
                app:navigationIconTint="@color/white"
                app:title="@string/app_name"
                app:titleTextColor="@color/white" />
        </com.google.android.material.appbar.AppBarLayout>

        <fragment
            android:id="@+id/homeNavHostFragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:navGraph="@navigation/nav_graph_home" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <ScrollView
        android:id="@+id/drawerScrollView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:overScrollMode="never"
        android:scrollbars="none"
        tools:layout_gravity="start">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                android:paddingTop="36dp"
                android:paddingBottom="36dp">

                <ImageView
                    android:id="@+id/avatarImg"
                    android:layout_width="66dp"
                    android:layout_height="66dp"
                    tools:background="@drawable/placeholder" />

                <TextView
                    android:id="@+id/usernameTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:text="Welcome, username" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider" />

            <TextView
                android:id="@+id/homeBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:drawablePadding="12dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingHorizontal="24dp"
                android:paddingVertical="16dp"
                android:text="@string/home"
                android:textAlignment="gravity"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:drawableLeft="@drawable/ic_round_home_24" />

            <TextView
                android:id="@+id/profileBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:drawablePadding="12dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingHorizontal="24dp"
                android:paddingVertical="16dp"
                android:text="@string/profile"
                android:textAlignment="gravity"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:drawableLeft="@drawable/ic_round_person_24" />
        </LinearLayout>
    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>